tests/errors/function_ref_block_incompatible.dang
# Test: function refs must match required block parameters

pub noBlock: String! {
  "no block"
}

let withBlock(&block(x: Int!): String!): String! {
  block(42)
}

withBlock = &noBlock
